day2/base/dov-bear-deploy.yaml
# k port-forward po/my-pod 8080:3000 -ndovns
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-po-deployment
  namespace: dovns
  labels:
    app: dov-container
    dept: BIZ
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dov-container
  template:
    metadata:
      labels:
        # Apply this label to pods and default
        # the Deployment label selector to this value
        app: dov-container
        dept: BIZ
    spec:
      containers:
        - name: dov-container
          image: chukmunnlee/dov-bear:v5
          imagePullPolicy: IfNotPresent # What to do when pulling image?
          ports: 
            # Expose
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: dov-svc
#   namespace: dovns
# spec:
#   type: ClusterIP
#   selector:
#     app: dov-container
#     dept: BIZ
#   ports: 
#     - port: 8080
#       targetPort: 3000


---
apiVersion: v1
kind: Service
metadata:
  name: dov-svc
  namespace: dovns
spec:
  type: NodePort
  selector:
    app: dov-container
    dept: BIZ
  ports: 
    - port: 8080
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
  name: dov-ing
  namespace: dovns
  labels:
    app: dov
    name: dov-ing
spec:
  ingressClassName: nginx
  rules:
  - host: dov-167.172.6.138.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dov-svc
            port: 
              number: 8080
